# First-Edition

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/apps/data-service/src/stockdesk_service/: secret_cli.py
apps/apps/data-service/src/stockdesk_service/providers/: akshare_provider.py  factory.py
apps/apps/data-service/tests/: test_symbols.py
apps/data-service/: pyproject.toml
apps/data-service/packaging/: service.spec
apps/data-service/src/stockdesk_service/: __main__.py  app.py  models.py
apps/data-service/src/stockdesk_service/providers/: akshare_provider.py
apps/data-service/src/stockdesk_service/utils/: symbols.py
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/desktop/dist-node/: tsconfig.node.tsbuildinfo
apps/desktop/src/main/: appContext.ts  index.ts
apps/desktop/src/main/ipc/: registerHandlers.ts
apps/desktop/src/main/services/: alertService.ts  analysisService.test.ts  analysisService.ts  analysisWorkflowRunner.ts  dataServiceClient.ts  dataServiceManager.ts  exportService.ts  llmClient.test.ts  llmClient.ts  llmProtocolAdapters.ts  secretManager.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: main.tsx  router.tsx  styles.css
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  DEVELOPMENT.md  LLM_PROTOCOLS.md  REVIEW_BACKLOG.md  RUN_ELECTRON_DEV_WINDOWS.md  StockDesk LLM 协议层重构 + 股票分析 Agent Workflow 计划案 .md
scripts/: pnpm-node.ps1  pnpm-node22.ps1
(+20 files in other folders)
