[project]
name = "stockdesk-service"
version = "0.1.0"
description = "Local A-share data service and secret manager for StockDesk"
requires-python = ">=3.13"
dependencies = [
  "akshare>=1.17.41",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "keyring>=25.6.0",
  "pandas>=2.3.2",
  "pydantic>=2.11.7",
  "uvicorn[standard]>=0.35.0"
]

[project.scripts]
stockdesk-service = "stockdesk_service.__main__:main"
stockdesk-secret = "stockdesk_service.secret_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pytest>=8.4.1"
]

